[package]
name = "adventofcode2022"
version = "0.14.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = { version = "4.0.29", features = ["derive", "string"] }
itertools = "0.10.5"
